Fix version, method